--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-requests>=2.31.0
-beautifulsoup4>=4.12.2
-lxml>=4.9.3
-pandas>=2.2.2
-tqdm>=4.66.4
-scikit-learn>=1.4.2
-numpy>=1.26.4
-streamlit>=1.36.0
+streamlit
+pandas
+numpy
+scikit-learn
+altair
+networkx
+pyvis
+matplotlib
+umap-learn
+scipy
