--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
-streamlit
-pandas
-numpy
-scikit-learn
-altair
-networkx
-pyvis
-matplotlib
-umap-learn
-scipy
+requests>=2.31.0
+beautifulsoup4>=4.12.2
+lxml>=4.9.3
+pandas>=2.2.2
+tqdm>=4.66.4
+scikit-learn>=1.4.2
+numpy>=1.26.4
+streamlit>=1.36.0
+networkx>=3.3
+pyvis>=0.3.2
+altair>=5.3.0
+matplotlib>=3.8.0
+umap-learn>=0.5.6
+scipy>=1.13.0
